EducationEverest/css/style.css
body
{
	font-family: 'Raleway', sans-serif;
}

html, body
{
    height: 100%;
}


input[type="text"]
{
 font-family : Raleway Medium;
  font-size : 18px;
  line-height : 22px;
  color : #B3B3B3;
  color : rgb(179, 179, 179);
}
.text-pink
{
	text-decoration: none;
	color: #FF0043 !important;
	
}
.normal-color{
	color: #CCCCCC !important;
}

.header2
{
    box-shadow: 2px 3px 2px #D1D3D4;
    text-align-: left;
    height: 50px;
    width: 100%;
	color: #CCCCCC;
	position: relative;
}

.header-list{
	  color: #9ba1bb;
      font-size: 20px;
      list-style: none;

}
.profile-tabs{
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 2px solid #9ba1bb;
	border-radius: 0px;
	background-color: white;
	height: 50px
}

.profile-tabs:hover{
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 4px solid #f12328;
	border-radius: 0px;
	background-color: white;
	height: 50px
}
.profile-tabs:focus{
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 4px solid #f12328;
	border-radius: 0px;
	background-color: white;
	height: 50px
}
.profile-tabs:active{
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 4px solid #f12328;
	border-radius: 0px;
	background-color: white;
	height: 50px
}
.profile-tabs:visited{
	border-top: none;
	border-left: none;
	border-right: none;
	border-bottom: 4px solid #f12328;
	border-radius: 0px;
	background-color: white;
	height: 50px
}
.menu_list{
	list-style: none;
  position : relative ;
  width : 100%;
  height : 40px;
 display: inline-block;
  padding: 10px;
  text-decoration: none;
}
.menu_list span{
	list-style: none;
  text-decoration: none;
  margin-left: 15px;
}
.list_items
{
	list-style: none;
  text-decoration: none;
}
.menu_list:hover{
  background : #E6E6E6;
  background : rgba(230, 230, 230, 1);
 	width : 100%;
  	height : 40px;
    text-decoration: none;
    list-style: none;

}
.menu_list span:hover{
  color : #2196F3;
  color : rgb(33, 150, 243);
	list-style: none;
  text-decoration: none;
}
.main_list{
		list-style: none;
  text-decoration: none;
}
.main_list span:hover{
  color : #2196F3;
  color : rgb(33, 150, 243);
    text-decoration: none;
    list-style: none;
}
.upload_photo:hover{
	text-decoration: none;
    list-style: none;
}
.menu-list {
  color : #2196F3;
  color : rgb(33, 150, 243);
      font-size: 15px;
      margin-top: 10px;
      list-style: none;
      text-decoration: none;
    }
 

.text-colour
{
	color: #9ba1bb;
	
}

	

input::placeholder { 
 font-family : Raleway Medium;
  font-size : 18px;
  line-height : 22px;
  color : #B3B3B3;
  color : rgb(179, 179, 179);
  }

  select{ 
  font-family : Raleway Medium;
  font-size : 18px;
  line-height : 22px;
  color : #B3B3B3;
  color : rgb(179, 179, 179);
  }

.side-menu
{
	color: #9ba1bb;
	margin-top: 4px;
	cursor: pointer;
	text-decoration: none;
	border-top: none;
	width: 20%;
	
}
.text-dropdown
{
	color: #DC143C !important;
	
}
.sidenav {
      padding-top: 20px;
      background-color:  #F2F2F2;
      height: 100%;
    }
 a.link{
	list-style: none;
	text-decoration: none;
	cursor: pointer; 
	border-bottom: solid 2px #F2F2F2;;
	padding-bottom: 8px;
}
a.link.active { 
	color : #2196F3;
 	color : rgb(33, 150, 243);
	border-bottom: solid 4px  #2196F3;
	border-radius: 0px;	
	}
a.link:hover{
	color : #2196F3;
 	color : rgb(33, 150, 243);
}
a{
	list-style: none;
	text-decoration: none;
}
a:hover,a:focus,a:active,a:visited{
	list-style: none;
	text-decoration: none;
}
.table-fixed {
    border-collapse: collapse;
  color : red;
  color : rgb(128, 128, 128);
  width: 100%;
}
.table-fixed th{
    border: 1px solid #808080;
    border-color: rgb(128, 128, 128);
    padding: 10px;
}
.table-fixed td{
    border: 1px solid #808080;
    border-color: rgb(128, 128, 128);
    padding: 10px;
}
.table-fixed tr:last-child td {
    border-bottom: 0;
    
}
.table-fixed th {
     border-left: 0;
     
    
}
.table-fixed td {
    border-bottom: 0;
     border-left: 0;

    
}
.table-fixed tr td:first-child,
.table-fixed tr th:first-child {
    border-left: 0;
}
.table-fixed tr td:last-child,
.table-fixed tr th:last-child {
    border-right: 0;
}
.table-fixed thead {
  width: 100%;
}
.table-fixed tbody {
  height: 180px;
  overflow-y: auto;
    overflow-x: auto;
  width: 100%;
}
.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
  display: block;
}
.table-fixed tbody td, .table-fixed thead > tr> th {
  float: left;
}
.panel-heading
{
	  background : #F2F2F2;
  background : rgba(242, 242, 242, 1);
	background-image: none !important;
}
.margin_left
{
	margin-left: 18px;
}
.margin_left2
{
	margin-left: -20px;
}
.margin_left3
{
	margin-left: -40px;
}
.margin_top
{
	margin-top: 10px;
}
.margin_top2
{
	margin-top: 15px;
}
.margin_top3
{
	margin-top: 40px;
}
.margin_bottom
{
	margin-bottom: 20px;
}
.margin_bottom2
{
	margin-bottom: 10px;
}

